@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: 2021-01-07
+  Changes:
+    - Remindor frame management 
   Refactor:
     - [tech] using flib-gui-beta
 ---------------------------------------------------------------------------------------------------
